# doc-qa

./: .gitignore  README.md  pyproject.toml
doc_qa_vss/: api_server.py  cli.py  pipeline.py  server.py
doc_qa_vss/db/: vector_db.py
doc_qa_vss/document/: processor.py
doc_qa_vss/models/: embedding.py
import/: fastmcp.txt  test.txt  新旧対照表_定款.docx
