[project]
dependencies = [
  "duckdb>=0.9.0",
  "torch>=2.0.0",
  "transformers==4.51.3",
  "sentence-transformers>=2.2.2",
  "sentencepiece>=0.1.97",
  "langchain>=0.0.200",
  "langchain-community>=0.0.1",
  "pypdf2>=3.0.0",
  "tqdm>=4.65.0",
  "numpy>=1.24.0",
  "accelerate>=0.20.0",
  "mcp[cli]>=1.6.0",
  "markitdown[all]>=0.1.1",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.1",
  "pydantic>=2.11.3",
  "dotenv>=0.9.9",
  "openai>=1.76.0",
]
description = "Document QA system using vector similarity search with DuckDB-VSS"
license = {text = "MIT"}
name = "doc_qa_vss"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.black]
line-length = 88

[project.scripts]
docqa = "doc_qa_vss.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["doc_qa_vss"]
